# pm_pipeline

./: README.md
pm_apps/: CMakeLists.txt  package.xml
pm_apps/launch/: cloud_merge.launch
pm_apps/launch/uwsim/data/scenes/: pose_estimation.xml
pm_apps/src/: 2d_pose_estimation.cpp  border_following.cpp  cloud_merge.cpp  cluster_measure_test.cpp  clustering.cpp  colour_cloud.cpp  compare_pose_estimation_methods.cpp  concave_hull.cpp  grasp_ranking_test.cpp  image_pose_estimation_test.cpp  log_results.cpp  mirror_cloud.cpp  mirror_cloud_test.cpp  octomap_test.cpp  online_cloud_merger.cpp  pca_pose_estimation_test.cpp  pose_estimation_test.cpp  process_cloud.cpp  ransac_pose_estimation_test.cpp  remove_nan.cpp  sphere_pose_estimation_test.cpp  sq_grasp_ranking_test.cpp  sq_pose_estimation_test.cpp
pm_examples/: CMakeLists.txt  package.xml
pm_examples/launch/: cloud_merger_example.launch  grasp_planning_example.launch
pm_examples/src/: border_following_example.cpp  border_following_full_example.cpp  cloud_merger_example.cpp  clustering_example.cpp  colour_cloud.cpp  concave_hull_example.cpp  grasp_planning_example.cpp  grasp_planning_with_clustering.cpp  grasp_testing.cpp  greedy_triangulation.cpp  hobbit_grasping.cpp  mirror.cpp  online_cloud_merger.cpp  particlef_template_tracking_tutorial.cpp  pose_estimation_example.cpp  process_cloud.cpp  tutorial.cpp
pm_grasp_visualization/: CMakeLists.txt  package.xml
pm_grasp_visualization/launch/: grasp.launch  object.urdf  play_merbots_bag.launch  server.launch  slider_grasp_server.launch  slider_grasp_server_planner_only.launch  slider_grasp_server_uwsim_only.launch  split_server.launch  waypoint_server.launch
pm_grasp_visualization/launch/uwsim/: cloud_source.urdf  gripper_for_spec.urdf  specification_scene.xml
pm_grasp_visualization/launch/uwsim/data/scenes/: specification_scene.xml
pm_grasp_visualization/src/: fegwer.cpp  grasp_marker.cpp  grasp_server.cpp  grasp_server_split.cpp  grasp_vis.cpp  online_grasp_server.cpp  slider_grasp_server.cpp  waypoint_server.cpp
pm_manipulation/: CMakeLists.txt  package.xml
pm_manipulation/include/pm_manipulation/: grasp_hypothesis_evaluation.h  hypothesis_generation.h  joint_offset.h  pm_grasp_planning.h  pm_grasp_planning_split.h  ranking_grasp_planner.h  slider_grasp_planner.h  trajectory_following.h
pm_manipulation/launch/: arm5e_with_sensor.urdf  arm_server.launch  arm_server.yaml  debug_fixed_tf_arm5.launch  fixed_tf_arm5.launch  grasp.launch  joint_offset.launch  joint_offset_launcher.launch  joint_offset_test.launch  ranking_grasp_server_planner_only.launch  slider_grasp_server.launch  slider_grasp_server_planner_only.launch  slider_grasp_server_uwsim_only.launch  tf_arm5.launch  waypoint_server.launch
pm_manipulation/launch/uwsim/data/robot/ARM5E/: ARM5E_part0.stl  ARM5E_part1.stl  ARM5E_part2.stl  ARM5E_part3.stl  ARM5E_part4_base_blue.3ds  ARM5E_part4_base_blue.blend  ARM5E_part4_base_blue.osg  ARM5E_part4_base_force_sensor.3ds  ARM5E_part4_base_force_sensor.blend  ARM5E_part4_base_force_sensor.blend1  ARM5E_part4_base_force_sensor.osg  ARM5E_part4_base_force_sensor.stl  ARM5E_part4_base_green.3ds  ARM5E_part4_base_green.blend  ARM5E_part4_base_green.osg  ARM5E_part4_base_red.3ds  ARM5E_part4_base_red.blend  ARM5E_part4_base_red.blend1  ARM5E_part4_base_red.osg  ARM5E_part4_jaw1long.stl  ARM5E_part4_jaw2long.stl
pm_manipulation/launch/uwsim/data/scenes/: arm5e_with_sensor.urdf  cloud_source.urdf  gripper_for_kin.urdf  object.urdf  specification_scene.xml
pm_manipulation/src/: arm_server.cpp  fake_pose_publisher.cpp  grasp_hypothesis_evaluation.cpp  hypothesis_generation.cpp  joint_offset.cpp  joint_offset_launcher.cpp  joint_offset_node.cpp  joint_offset_test.cpp  object_pose_from_marker_pose.cpp  planning_and_visualization_simple.cpp  pm_grasp_planning.cpp  pm_grasp_planning_split.cpp  publish_pose.cpp  ranking_grasp_planner.cpp  ranking_grasp_planner_server.cpp  set_joint_position.cpp  slider_grasp_planner.cpp  slider_grasp_planner_server.cpp  slider_grasp_server.cpp  trajectory_following.cpp  waypoint_server.cpp
pm_measure/: CMakeLists.txt  package.xml
pm_measure/include/pm_measure/: timing.h
pm_measure/src/: timing.cpp
pm_pcl_tools/: CMakeLists.txt  package.xml
pm_pcl_tools/include/pm_pcl_tools/: pcl_tools.h
pm_pcl_tools/src/: pcl_tools.cpp
pm_perception/: CMakeLists.txt  package.xml
pm_perception/include/pm_perception/: background_removal.h  border_detection.h  cluster_measure.h  image_pose_estimation.h  object_segmentation.h  octomap.h  pca_pose_estimation.h  pose_estimation.h  ransac_pose_estimation.h  sac_pose_estimation.h  sq_pose_estimation.h  symmetry.h
pm_perception/src/: background_removal.cpp  border_detection.cpp  cluster_measure.cpp  image_pose_estimation.cpp  object_segmentation.cpp  octomap.cpp  pca_pose_estimation.cpp  pose_estimation.cpp  ransac_pose_estimation.cpp  sac_pose_estimation.cpp  sq_pose_estimation.cpp  symmetry.cpp
pm_qt_interfaces/: CMakeLists.txt  mainpage.dox  package.xml
pm_qt_interfaces/include/pm_qt_interfaces/: main_window.hpp  qnode.hpp
pm_qt_interfaces/src/: main.cpp  main_window.cpp  qnode.cpp
pm_registration/: CMakeLists.txt  package.xml
pm_registration/include/pm_registration/: marker_registration.h
pm_registration/launch/: ar_registration_setup.launch
pm_registration/src/: ar_registration.cpp  incremental_registration.cpp  incremental_registration_example.cpp  marker_registration.cpp  registration_example.cpp
pm_tools/: CMakeLists.txt  package.xml
pm_tools/include/pm_tools/: average.h  logger.h  marker_tools.h  pcl_clustering.h  pcl_merge.h  pcl_segmentation.h  pcl_tools.h  tf_tools.h  timing.h  virtual_image.h  visp_tools.h
pm_tools/src/: average.cpp  conversions.cpp  logger.cpp  marker_tools.cpp  pcl_clustering.cpp  pcl_merge.cpp  pcl_segmentation.cpp  pcl_tools.cpp  registration_example.cpp  tf_tools.cpp  timing.cpp  virtual_image.cpp  visp_tools.cpp
