<?xml version="1.0"?>
<package>
  <name>pm_grasp_visualization</name>
  <version>0.1.0</version>
  <description>This package is used to plan a grasp and display a very basic interface to it.</description>
  <maintainer email="Fornas@todo.todo">David Fornas</maintainer>
  <license>Apache 2.0</license>
  <author >David Fornas</author>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>pm_manipulation</build_depend>
  <build_depend>pm_tools</build_depend>
  <build_depend>pm_perception</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>pm_manipulation</run_depend>
  <run_depend>pm_tools</run_depend>
  <run_depend>pm_perception</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>interactive_markers</run_depend>
  <run_depend>tf</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
