<?xml version="1.0"?>
<package>

  <name>pm_manipulation</name>
  <version>0.0.0</version>
  <description>The pm_manipulation package</description>

  <maintainer email="dfornas@uji.es">David Fornas</maintainer>
  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/pm_manipulation</url> -->
  <author email="dfornas@uji.es">David Fornas</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>pm_perception</build_depend>
  <build_depend>pm_pcl_tools</build_depend>
    
  <run_depend>roscpp</run_depend>
  <run_depend>pm_perception</run_depend>
  <run_depend>pm_pcl_tools</run_depend>

</package>