<?xml version="1.0"?>
<package>

  <name>pm_manipulation</name>
  <version>0.1.0</version>
  <description>
  The pm_manipulation package cointains tools that deal with  arm 
  control (mainly the ARM5E used by the IRSLab) and grasp specification.
  For this reason it depends on mar_robot_arm5e from 
  https://github.com/penalvea/irs-ros-pkg
  </description>

  <maintainer email="dfornas@uji.es">David Fornas</maintainer>
  <license>BSD</license>

  <url type="website">https://github.com/davidfornas/pm_pipeline</url>
  <author email="dfornas@uji.es">David Fornas</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>pm_perception</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>mar_robot_arm5e</build_depend>
  <build_depend>pm_tools</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>pm_perception</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>mar_robot_arm5e</run_depend>
  <run_depend>pm_tools</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
