<?xml version="1.0"?>
<package>
  <name>pm_measure</name>
  <version>0.0.0</version>
  <description> The pm_measure has measuring tools. In first place timing tools.</description>

  <maintainer email="dfornas@uji.es">David Fornas</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/pm_measure</url> -->
  <author email="dfornas@uji.es">David Fornas</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  
  <run_depend>roscpp</run_depend>
 </package>