<?xml version="1.0"?>
<package>
  <name>pm_pcl_tools</name>
  <version>0.0.0</version>
  <description> The pm_pcl_tools has the tools required for the pm_pipeline packages such as PCL wrapper code and interaction with ViSP,
  which is used because it hasa great geometric interface and maths in general.</description>

  <maintainer email="dfornas@uji.es">David Fornas</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/pm_pcl_tools</url> -->
  <author email="dfornas@uji.es">David Fornas</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
pcl_conversions
</package>