<?xml version="1.0"?>
<package>
  <name>pm_perception</name>
  <version>0.0.0</version>
  <description>This package contains sensor acquisition and precessing.</description>

  <maintainer email="dfornas@uji.es">David Fornas</maintainer>
  <license>BSD</license>

  <!-- <url type="website">http://wiki.ros.org/pm_perception</url> -->
  <author email="dfornas@uji.es">David Fornas</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>visualization_msgs</run_depend>

</package>