<?xml version="1.0"?>
<package>
  <name>pm_registration</name>
  <version>0.0.0</version>
  <description>The pm_registration package contains some registration nodes used to join point clouds obtained with a stereo pair.</description>

  <maintainer email="dfornas@uji.es">David Fornas</maintainer>
  <license>BSD</license>
  <!-- <url type="website">http://wiki.ros.org/pm_registration</url> -->
  <author email="dfornas@uji.es">David Fornas</author>
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>pm_measure</build_depend>
  <build_depend>pm_tools</build_depend>  
  
  <run_depend>roscpp</run_depend>
  <run_depend>pm_measure</run_depend>
  <run_depend>pm_tools</run_depend>

</package>